feat: Update Machines UI to pull API Data (#24)
* feat(api,ui): load machines from backend

* refactor: isolate machine models and types

* fix: resolve lint issues for machines view

* chore: format machines page
